--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 
-<link rel="icon" href="/images/logo_ok.ico" />
+<link rel="icon" href="images/logo_ok.ico" />
 <link rel="stylesheet" type="text/css" href="css/normalize.css" />
 <link rel="stylesheet" type="text/css" href="css/demo.css" />
 <link rel="stylesheet" type="text/css" href="css/linkstyles.css" />
